Add support for printing the order
