# src/main/java/br/com/arcasoftware/comercialapi/application/repository/model/CustomerOrder.java
@@ -28,4 +28,34 @@ public class CustomerOrder extends BaseEntityV2 {
     private Double totsub;
     private Double totdescinc;
     private Double totres;
+
+    private String nomemp;
+    private String end1;
+    private String end2;
+    private String webemp;
+    private String emaemp;
+    private String nomcli;
+    private String endent;
+    private String apeven;
+    private String cgcemp;
+    private String insemp;
+    private Instant dtfres;
+    private Integer idFrete;
+    private String descfrt;
+    private String telefone;
+    private String emaven;
+    private String cgccli;
+    private String cidcli;
+    private String inscli;
+    private String ufecli;
+    private String cepcli;
+    private String nomtra;
+    private String endtra;
+    private String cgctra;
+    private String cidtra;
+    private String fonetra;
+    private String ufetra;
+    private String ceptra;
+    private Double toticm;
+    private String obsres;
 }
