# src/main/java/br/com/arcasoftware/comercialapi/controller/PedResController.java
@@ -1,11 +1,13 @@
 package br.com.arcasoftware.comercialapi.controller;
 
 import br.com.arcasoftware.comercialapi.application.exception.ValidationException;
-import br.com.arcasoftware.comercialapi.application.service.PedResService;
+import br.com.arcasoftware.comercialapi.application.repository.model.CustomerOrder;
+import br.com.arcasoftware.comercialapi.application.repository.model.CustomerOrderDetail;
+import br.com.arcasoftware.comercialapi.application.service.CustomerOrderDetailService;
+import br.com.arcasoftware.comercialapi.application.service.CustomerOrderService;
 import br.com.arcasoftware.comercialapi.application.service.ReportService;
-import br.com.arcasoftware.comercialapi.model.IReportPedRe2Detail;
-import br.com.arcasoftware.comercialapi.model.IReportPedResHead;
 import br.com.arcasoftware.comercialapi.model.ReportFull;
+import lombok.extern.slf4j.Slf4j;
 import net.sf.jasperreports.engine.JRException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
@@ -30,24 +32,31 @@ import java.util.List;
 @RestController
 @RequestMapping(path = "/pedres")
 @CrossOrigin("*")
+@Slf4j
 public class PedResController {
 
-    private final PedResService service;
     private final ReportService reportService;
+    private final CustomerOrderService customerOrderService;
+    private final CustomerOrderDetailService customerOrderDetailService;
 
     @Autowired
-    public PedResController(PedResService service, ReportService reportService) {
-        this.service = service;
+    public PedResController(ReportService reportService, CustomerOrderService customerOrderService,
+                            CustomerOrderDetailService customerOrderDetailService) {
         this.reportService = reportService;
+        this.customerOrderService = customerOrderService;
+        this.customerOrderDetailService = customerOrderDetailService;
     }
 
     @GetMapping(path = "impressao_pedido/{codemp}/{dteres}/{numres}")
     public ResponseEntity<InputStreamResource> impressaoPedido(@PathVariable("codemp") Integer codemp, @PathVariable("dteres") Date dteres, @PathVariable("numres") Integer numres) {
         try {
-            IReportPedResHead pedInfo = service.getReportPedRes(numres);
-            List<IReportPedRe2Detail> reportPedRe2 = service.getReportPedRe2(codemp, dteres, numres);
+            /***
+             * TODO CNPJEMPRESA is HARD-CODED here
+             */
+            CustomerOrder customerOrder = this.customerOrderService.getAllByCnpjEmpresaAndNumres("03089573000121", numres.toString());
+            List<CustomerOrderDetail> orderDetailList = this.customerOrderDetailService.getByCustomerOrder(customerOrder.getId());
 
-            ByteArrayOutputStream exportReport = reportService.impressaoPedido(Collections.singletonList(new ReportFull(pedInfo, reportPedRe2)));
+            ByteArrayOutputStream exportReport = reportService.impressaoPedido(Collections.singletonList(new ReportFull(customerOrder, orderDetailList)));
             HttpHeaders httpHeaders = new HttpHeaders();
             httpHeaders.add("Content-Disposition", "inline; filename=impressaoPedido_" + numres + ".pdf");
 
@@ -60,6 +69,7 @@ public class PedResController {
                     .contentType(MediaType.APPLICATION_PDF)
                     .body(new InputStreamResource(targetStream));
         } catch (JRException | IOException e) {
+            log.error(e.getMessage());
             throw new ValidationException(e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
 
