# src/main/java/br/com/arcasoftware/comercialapi/model/ReportFull.java
@@ -1,5 +1,7 @@
 package br.com.arcasoftware.comercialapi.model;
 
+import br.com.arcasoftware.comercialapi.application.repository.model.CustomerOrder;
+import br.com.arcasoftware.comercialapi.application.repository.model.CustomerOrderDetail;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 
@@ -8,6 +10,6 @@ import java.util.List;
 @AllArgsConstructor
 @Getter
 public class ReportFull {
-    IReportPedResHead pedres;
-    List<IReportPedRe2Detail> pedre2;
+    CustomerOrder pedres;
+    List<CustomerOrderDetail> pedre2;
 }
